[gd_scene load_steps=10 format=3 uid="uid://b7r0s4ummknjj"]

[ext_resource type="Script" path="res://Enemy/Enemy.gd" id="1_jht6x"]
[ext_resource type="PackedScene" uid="uid://ciqbxhrw55wk" path="res://Enemy/WarriorModel.tscn" id="2_bqxos"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pyi6j"]
height = 2.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sutea"]
albedo_color = Color(1, 0.239216, 0.239216, 1)

[sub_resource type="BoxMesh" id="BoxMesh_j305a"]
material = SubResource("StandardMaterial3D_sutea")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sdi2u"]
albedo_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="BoxMesh" id="BoxMesh_w1iai"]
material = SubResource("StandardMaterial3D_sdi2u")
size = Vector3(0.6, 0.3, 0.3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_k1ifn"]
height = 4.0
radius = 8.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nhmqg"]
radius = 1.7

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_jht6x")

[node name="WarriorModel" parent="." instance=ExtResource("2_bqxos")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.152107, 0)
shape = SubResource("CapsuleShape3D_pyi6j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_j305a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.509943)
mesh = SubResource("BoxMesh_w1iai")

[node name="IdleTimer" type="Timer" parent="."]

[node name="PatrolTimer" type="Timer" parent="."]

[node name="SightRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightRange"]
shape = SubResource("CylinderShape3D_k1ifn")

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_nhmqg")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
